Spacing fixes

--- a/public/static/css/index_base.css
+++ b/public/static/css/index_base.css
@@ -76,6 +76,10 @@ div#site_header.panel p {
 #side_bar {
   padding-right: 0;
 }
+#side_bar h3 {
+  font-size: 1.3em;
+  margin-top: 0;
+}
 #side_bar div.row {
   background-color: rgba(255, 255, 255, 0.9);
   margin: 0;
@@ -139,7 +143,6 @@ div#site_header.panel p {
   text-align: right;
   margin: 0;
   font-variant: small-caps;
-  text-shadow: #444;
 }
 #side_bar div.side_block#top_item {
   padding-top: 1em;
@@ -154,6 +157,9 @@ div#site_header.panel p {
   width: 100%;
   font-size: 2em;
   font-weight: bold;
+}
+#side_bar div.side_block.stats_box #pledge_stats {
+  margin-bottom: 0;
 }
 span.icon_sprite, li.icon_sprite {
   background-image: url('/static/icon_sprite.png');
